third_party/move/move-compiler-v2/tests/checking/typing/binary_lt_invalid.exp

Diagnostics:
error: invalid call of `<`: expected `integer` but found `bool` for argument 1
  ┌─ tests/checking/typing/binary_lt_invalid.move:8:9
  │
8 │         false < true;
  │         ^^^^^

error: invalid call of `<`: expected `integer` but found `bool` for argument 2
  ┌─ tests/checking/typing/binary_lt_invalid.move:9:13
  │
9 │         1 < false;
  │             ^^^^^

error: invalid call of `<`: expected `integer` but found `bool` for argument 1
   ┌─ tests/checking/typing/binary_lt_invalid.move:10:9
   │
10 │         false < 1;
   │         ^^^^^

error: invalid call of `<`: expected `integer` but found `address` for argument 1
   ┌─ tests/checking/typing/binary_lt_invalid.move:11:9
   │
11 │         @0x0 < @0x1;
   │         ^^^^

error: invalid call of `<`: expected `u8` but found `u128` for argument 2
   ┌─ tests/checking/typing/binary_lt_invalid.move:12:20
   │
12 │         (0: u8) < (1: u128);
   │                    ^

error: invalid call of `<`: expected `integer` but found `M::R` for argument 1
   ┌─ tests/checking/typing/binary_lt_invalid.move:13:9
   │
13 │         r < r;
   │         ^

error: invalid call of `<`: expected `integer` but found `M::S` for argument 1
   ┌─ tests/checking/typing/binary_lt_invalid.move:14:9
   │
14 │         s < s;
   │         ^

error: invalid call of `<`: expected `integer` but found `bool` for argument 1
   ┌─ tests/checking/typing/binary_lt_invalid.move:15:9
   │
15 │         0 < 1 < 2;
   │         ^^^^^

error: invalid call of `<`: expected `integer` but found `bool` for argument 2
   ┌─ tests/checking/typing/binary_lt_invalid.move:16:14
   │
16 │         (1 < false) && (@0x0 < 0);
   │              ^^^^^

error: invalid call of `<`: expected `integer` but found `address` for argument 1
   ┌─ tests/checking/typing/binary_lt_invalid.move:16:25
   │
16 │         (1 < false) && (@0x0 < 0);
   │                         ^^^^

error: invalid call of `<`: expected `integer` but found `()` for argument 1
   ┌─ tests/checking/typing/binary_lt_invalid.move:17:9
   │
17 │         () < ();
   │         ^^

error: invalid call of `<`: expected `integer` but found `()` for argument 2
   ┌─ tests/checking/typing/binary_lt_invalid.move:18:13
   │
18 │         1 < ();
   │             ^^

error: invalid call of `<`: expected `integer` but found `(integer, integer)` for argument 1
   ┌─ tests/checking/typing/binary_lt_invalid.move:19:9
   │
19 │         (0, 1) < (0, 1, 2);
   │         ^^^^^^

error: invalid call of `<`: expected `integer` but found `(integer, integer)` for argument 1
   ┌─ tests/checking/typing/binary_lt_invalid.move:20:9
   │
20 │         (1, 2) < (0, 1);
   │         ^^^^^^
